--- a/xmljpademo/src/main/resources/application.properties
+++ b/xmljpademo/src/main/resources/application.properties
@@ -3,7 +3,16 @@ app.employees.datasource.username=testuser
 app.employees.datasource.password=19811981
 app.employees.datasource.maximum-pool-size=30
 
+app.posts.datasource.jdbc-url=jdbc:mysql://140.143.45.252:3306/postsdb?useSSL=true
+app.posts.datasource.username=testuser
+app.posts.datasource.password=19811981
+app.posts.datasource.maximum-pool-size=30
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.com.example.xmljpademo=DEBUG
