--- a/xmljpademo/src/main/resources/application.properties
+++ b/xmljpademo/src/main/resources/application.properties
@@ -8,7 +8,7 @@ app.posts.datasource.username=testuser
 app.posts.datasource.password=19811981
 app.posts.datasource.maximum-pool-size=10
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
@@ -16,3 +16,4 @@ logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 logging.level.com.example.xmljpademo=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
