standalone and pipeline

--- a/xmljpademo/src/main/resources/application.properties
+++ b/xmljpademo/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+spring.profiles.active=redis-standalone
 app.employees.datasource.jdbc-url=jdbc:mysql://140.143.45.252:3306/employees?useSSL=true
 app.employees.datasource.username=testuser
 app.employees.datasource.password=19811981
@@ -12,8 +14,8 @@ app.posts.datasource.maximum-pool-size=10
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework.orm.jpa=DEBUG
-logging.level.org.springframework.transaction=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework.orm.jpa=DEBUG
+#logging.level.org.springframework.transaction=DEBUG
 logging.level.com.example.xmljpademo=DEBUG
 logging.level.org.springframework.data.redis=DEBUG
