--- a/xmljpademo/src/main/resources/application.properties
+++ b/xmljpademo/src/main/resources/application.properties
@@ -11,11 +11,11 @@ app.posts.datasource.password=19811981
 app.posts.datasource.maximum-pool-size=10
 
 #spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#
 #logging.level.org.hibernate=DEBUG
 #logging.level.org.springframework.orm.jpa=DEBUG
-#logging.level.org.springframework.transaction=DEBUG
-logging.level.com.example.xmljpademo=DEBUG
-logging.level.org.springframework.data.redis=DEBUG
+##logging.level.org.springframework.transaction=DEBUG
+#logging.level.com.example.xmljpademo=DEBUG
+#logging.level.org.springframework.data.redis=DEBUG
